--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,5 +27,5 @@
     ],
     "react/jsx-curly-spacing": [2, "never"]
   },
-  "settings": { "import/resolver": { "node": { "paths": ["src"] } } }
+  "settings": { "import/resolver": { "node": { "paths": ["src"], "extensions": [".js", ".jsx", ".ts", ".tsx"] } } }
 }
